Move expand button next to thumbnails at mobile breakpoint (fixes #130), increase vertical space around tab thumbnails to allow for Windows 10 overflow scrollbars

--- a/scss/frontend.scss
+++ b/scss/frontend.scss
@@ -22,6 +22,9 @@
 $icomoon-font-path: '../icons/icomoon/fonts';
 @import '../icons/icomoon/style.scss';
 
+$tab-gutter: 6px;
+$tab-gutter-mobile-vert: 20px; // allows for visible Windows 10 overflow scrollbars
+
 // -------------------------------------------------------------------
 // Extends
 // -------------------------------------------------------------------
@@ -53,12 +56,14 @@ $icomoon-font-path: '../icons/icomoon/fonts';
         }
     }
 
+    // ---------------------------------------------------
     // TABLIST
+    // ---------------------------------------------------
 
     &__tablist {
         position: relative; // stack on top of sticky nav
         width: 100%;
-        height: (100px + 6px);
+        height: ($tab-gutter-mobile-vert + 100px + $tab-gutter-mobile-vert); // gutter + thumbnail + gutter
         white-space: nowrap;
         overflow-x: auto; // scrollable row of thumbnails
         overflow-y: hidden;
@@ -101,17 +106,15 @@ $icomoon-font-path: '../icons/icomoon/fonts';
     }
 
     &__tab {
-        $gutter: 6px;
-
         display: inline-block;
         width: 100px;
         background-color: var(--wpdtrt-gallery-bg-color-loading);
         padding: 0;
         border: 0;
-        margin: 0 $gutter $gutter 0;
+        margin: $tab-gutter-mobile-vert $tab-gutter $tab-gutter-mobile-vert 0;
 
         &--last {
-            margin-right: 0;
+            margin-right: (6px + 60px); // space for expand button
         }
 
         &:hover,
@@ -236,7 +239,14 @@ $icomoon-font-path: '../icons/icomoon/fonts';
         }
     }
 
+    // ---------------------------------------------------
     // TABPANELS
+    // ---------------------------------------------------
+
+    &__tabpanels {
+        position: relative; // AP for expand button
+
+    }
 
     &__tabpanels-liner {
         display: block; // figure
@@ -338,16 +348,29 @@ $icomoon-font-path: '../icons/icomoon/fonts';
         }
     }
 
+    &__expand-wrapper {
+        &::before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: ((-1 * 100px) + (-1 * $tab-gutter-mobile-vert)); // gutter + thumbnail + gutter
+            right: 60px;
+            width: 6px;
+            height: 100px;
+            background: linear-gradient(90deg, var(--wpdtrt-gallery-bg-color-page-10), var(--wpdtrt-gallery-bg-color-page) 40%);
+        }
+    }
+
     // viewer expand/collapse button
     // positioned at bottom right of header
     &__expand {
-        opacity: 1;
+        opacity: .9;
         position: absolute;
-        top: 0;
+        top: ((-1 * 100px) + (-1 * $tab-gutter-mobile-vert));// gutter + thumbnail + gutter
         right: 0;
         z-index: 2;
-        width: 56px;
-        height: 56px;
+        width: 60px;
+        height: 100px;
         text-shadow: -1px -1px 0 var(--wpdtrt-gallery-border-color),
             1px -1px 0 var(--wpdtrt-gallery-border-color),
             -1px 1px 0 var(--wpdtrt-gallery-border-color),
@@ -389,7 +412,6 @@ $icomoon-font-path: '../icons/icomoon/fonts';
         }
     }
 
-
     // ---------------------------------------------------
     // STATES
     // ---------------------------------------------------
@@ -397,18 +419,14 @@ $icomoon-font-path: '../icons/icomoon/fonts';
     &[data-enabled='true'] {
         #{$block}__header {
             min-height: 56px; // height of AP expand button
-            padding-right: 72px; // space for expand button, running the border underneath
             border-bottom: 3px solid var(--wpdtrt-gallery-bg-color);
-            margin-bottom: 6px;
+            margin-bottom: 0;
         }
     }
 
     &[data-enabled='true'][data-expanded='true'] {
         #{$block}__tabpanels {
             &__expand {
-                top: auto;
-                bottom: 0;
-
                 line-height: 0;
 
                 &::after {
@@ -486,28 +504,33 @@ $icomoon-font-path: '../icons/icomoon/fonts';
                 &__expand {
                     border: var(--wpdtrt-gallery-inset) solid var(--wpdtrt-gallery-border-color);
                 }
-
-                &__expand {
-                    top: 0;
-                    bottom: auto;
-                }
             }
         }
     }
 
     @include media('>=laptop') {
-        &__expand-wrapper {
-            position: relative; // AP for expand button
+        &__tabpanels {
+            z-index: 1; // stack on top of sticky nav so that text can be selected
         }
 
-        &__tabpanels {
-            position: relative; // AP
-            z-index: 1; // stack on top of sticky nav so that text can be selected
+        &__expand-wrapper {
+            position: relative; // AP for expand button
+
+            &::before {
+                display: none;
+            }
+        }
+
+        &__expand {
+            opacity: 1;
+            top: 0;
+            bottom: auto;
+            width: 56px;
+            height: 56px;
         }
 
         &[data-enabled='true'] {
             #{$block}__header {
-                padding-right: 0;
                 border-bottom: 0;
                 margin-right: 72px; // space for expand button
             }
@@ -575,6 +598,11 @@ $icomoon-font-path: '../icons/icomoon/fonts';
                 &__expand {
                     border: var(--wpdtrt-gallery-inset) solid var(--wpdtrt-gallery-border-color);
                 }
+            }
+
+            #{$block}__expand {
+                top: auto;
+                bottom: 0;
             }
         }
     }
